-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.0
-
None
-
Qt 5.9 as supplied by openSUSE Tumbleweed, compiled with GCC 7.
-
184d80f5a0d6764745ab77487620eb41679226f0 (qtbase/5.9, 16.7.2017, 5.9.2)
In Qt 5.9, Alt-key accelerators in QDialogButtonBox are currently not working. This was observed both in KDE Plasma's control modules but also in the minimal example shown below:
#include <QApplication> #include <QDialog> #include <QDialogButtonBox> int main(int argc, char** argv) { QApplication app(argc, argv); QDialog* dlg = new QDialog; dlg->setMinimumWidth(200); QDialogButtonBox* box = new QDialogButtonBox(QDialogButtonBox::Ok | QDialogButtonBox::Reset, Qt::Horizontal, dlg); QDialogButtonBox::connect(box, &QDialogButtonBox::accepted, dlg, &QDialog::accept); dlg->show(); return app.exec(); }
Steps to reproduce:
- Build and run the test
- Press the Alt key: Accelerators are shown under Reset and OK
- While pressing Alt, press "o"
Expected result: Dialog closes
Actual result: Nothing happens
- is duplicated by
-
QTBUG-54119 QMessageBox::question cannot use keyboard shortcuts for Yes & No
-
- Closed
-
For Gerrit Dashboard: QTBUG-61197 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
198123,2 | QDialogButtonBox: Don't overwrite shortcut with standardButtonShortcut | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |